--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
-    "next": "13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "@web3auth-mpc/base": "^2.1.9",
+    "@web3auth-mpc/openlogin-adapter": "^2.1.22",
+    "@web3auth-mpc/web3auth": "^2.1.22",
+    "@web3auth/base": "^3.0.4",
+    "@web3auth/ethereum-provider": "^3.0.4",
+    "@web3auth/modal": "^3.0.4",
+    "ethers": "^5.7.2",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "torus-mpc": "^0.0.10",
+    "web3": "^1.8.1"
+  },
+  "devDependencies": {
+    "@types/elliptic": "^6.4.14",
+    "@types/node": "17.0.35",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "4.6.4"
   }
 }
